fixes in labeling

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
    "source": [
     "x = []\n",
     "y = []\n",
-    "treshold = -0.035\n",
+    "treshold = -0.025\n",
     "for i in range(0, N-5, 5):\n",
     "    x.append([])\n",
     "    for j in range (i,i+5,1):\n",
@@ -73,7 +73,7 @@
     "            y.append(1)\n",
     "        else:\n",
     "            y.append(0)\n",
-    "x = np.delete(x, 0, 0)\n",
+    "x = np.delete(x, 3416, 0)\n",
     "print(np.size(x,0), np.size(y))\n",
     "trainSize = 2500\n",
     "x_train = x[:trainSize]\n",
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "342 63\n0.587301587302\n"
+      "916 504 107\n0.420560747664\n"
      ]
     }
    ],
@@ -101,42 +101,42 @@
     "clf.fit(x_train, y_train)\n",
     "y_predict = clf.predict(x_test)\n",
     "res = recall_score(y_test, y_predict, average='binary')\n",
-    "print(sum(y_predict), sum(y_test))\n",
-    "print(res) # процент верно предсказанных кризисов к общему количеству кризисов"
+    "print(np.size(y_predict), sum(y_predict), sum(y_test))\n",
+    "print(res) # the percent of crises, which was correctly predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 63\n0.0\n"
+      "916 53 107\n0.0747663551402\n"
      ]
     }
    ],
    "source": [
-    "clf = LogisticRegression(C=1000, solver='lbfgs')\n",
+    "clf = LogisticRegression(class_weight={0: 0.15,1: 0.85})\n",
     "clf.fit(x_train, y_train)\n",
     "y_predict = clf.predict(x_test)\n",
     "res = recall_score(y_test, y_predict, average='binary')\n",
-    "print(sum(y_predict), sum(y_test))\n",
+    "print(np.size(y_predict), sum(y_predict), sum(y_test))\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 63\n0.0\n"
+      "0 107\n0.0\n"
      ]
     }
    ],
