--- a/treshhold.ipynb
+++ b/treshhold.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
