change comments to english

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -84,7 +84,7 @@
     "        x[int(i/5)].extend(series[j])\n",
     "    if i > 0:\n",
     "        if (x[int(i/5)][-2]-x[int(i/5)-1][-2])/x[int(i/5)-1][-2] < treshold:\n",
-    "            # 1 если от закрытия текущей недели до закрытия следующей произошло падение в более чем 3,5 процента\n",
+    "            # 1 if downtrend was more than treshold, 0 - otherwise \n",
     "            y.append(1)\n",
     "        else:\n",
     "            y.append(0)\n",
@@ -286,7 +286,7 @@
     "y_predict = clf.predict(x_test)\n",
     "res = recall_score(y_test, y_predict, average='binary')\n",
     "print(sum(y_predict), sum(y_test))\n",
-    "print(res) # процент верно предсказанных кризисов к общему количеству кризисов"
+    "print(res) # the percent of crises, which was correctly predicted"
    ]
   },
   {
